--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,14 +1,183 @@
+html{
+  display: block;
+}
+
+body{
+  display: block;
+  margin: 0;
+}
+
 header{
   display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  border-bottom: 1px solid black;
+  background-color: white;
 }
 
 nav{
   display: block;
+  color: black;
+}
+
+a{
+  color: black;
+}
+
+header nav{
+  padding-right: 40px;
+}
+
+nav span{
+  display: inline-block;
+  padding: 20px 10px;
 }
 
 .logo{
-  color: Aquamarine
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
+  color: Aquamarine;
+}
+
+.logo img{
+  margin-right: 12px;
+}
+
+div{
+  display: block;
+}
+
+.column{
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+
+.column.large{
+  width: 630px;
+}
+
+.column.medium{
+  width: 300px;
+}
+
+.column.small{
+  width: 240px;
+}
+
+.content {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 166px;
+}
+
+.lead-story .image-content{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+  width: 630px;
+  margin-top: 0px;
+  font-size: 40px;
+  text-align: left;
+}
+
+.image-content{
+  display: flex;
+  flex-direction; column;
+  justify-content: center;
+  height: 300px;
+  font-family: Georgia;
+  margin-top: 15px;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+.fall-cancelled.image-content{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+}
+
+.pop-culture.image-content{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png")
+}
+
+.cat-ceo.image-content{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png")
+}
+
+h2{
+  font-family: Georgia;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+body{
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.story{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.stories{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.news-bites h3{
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news-bites .bite{
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+footer .title{
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav{
+  display: inline-block;
+  padding-left: 25px;
 }
