--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,6 +4,10 @@ html{
 
 body{
   display: block;
+  margin: 8px;
+}
+
+body{
   margin: 0;
 }
 
@@ -77,7 +81,7 @@ div{
   display: flex;
   width: 1232px;
   margin: 0 auto 78px auto;
-  padding-top: 166px;
+  padding-top: 116px;
 }
 
 .lead-story .image-content{
